[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scripts/Menu.gd" type="Script" id=1]

[node name="Menu" type="Node2D"]
script = ExtResource( 1 )

[node name="NovoJogo" type="ToolButton" parent="."]
margin_left = 0.707108
margin_top = 73.5391
margin_right = 76.7071
margin_bottom = 95.5391
text = "Novo jogo"
align = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Missoes" type="ToolButton" parent="."]
margin_left = 1.41422
margin_top = 108.187
margin_right = 77.4142
margin_bottom = 130.187
text = "Missoes"
align = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Creditos" type="ToolButton" parent="."]
margin_top = 141.421
margin_right = 76.0
margin_bottom = 163.421
text = "Creditos"
align = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sair" type="ToolButton" parent="."]
margin_left = 0.793701
margin_top = 169.995
margin_right = 76.7937
margin_bottom = 191.995
text = "Sair"
align = 0
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="button_down" from="NovoJogo" to="." method="_novo_jogo"]
[connection signal="button_down" from="Missoes" to="." method="_on_Missoes_button_down"]
[connection signal="button_down" from="Creditos" to="." method="_on_Creditos_button_down"]
[connection signal="button_down" from="Sair" to="." method="_on_Sair_button_down"]
